Completed with all The backend Add features

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is website for CRUD of songs and artists",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,15 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-validator": "^6.4.0",
+    "file-type": "^14.1.4",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6"
+  },
+  "devDependencies": {
+    "busboy": "^0.3.1",
+    "ejs": "^3.0.2"
   }
 }
