--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+config/default.json
+views/
 
 # TypeScript v1 declaration files
 typings/
@@ -102,6 +104,5 @@ dist
 
 # TernJS port file
 .tern-port
-/config/default.json
 
 .vscode/
