--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-type": "^14.1.4",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.6"
   },
   "devDependencies": {
